# pypto-serving

./: CMakeLists.txt  golden_report.json  pypto_serving_design goal.md  pypto_serving_implementation_plan.md
examples/golden_paged_attention/: golden.py
src/: L2_chip_workers.py  L3_decode_server.py  L3_prefill_server.py  L4_pod_orchestrator.py  serving_main.py
src/common/: request.h
src/distributed/: service_pool.cpp  service_pool.h
src/engine/: L3_workers.cpp  L3_workers.h  inference_engine.cpp  inference_engine.h  pod_orchestrator.cpp  pod_orchestrator.h  request_server.cpp  request_server.h  serving_system.cpp  serving_system.h  stop_condition.cpp  stop_condition.h
src/frontend/: test_path.cpp  test_path.h  test_path.py
src/kv/: kv_cache_manager.cpp  kv_cache_manager.h  kv_persistence.cpp  kv_persistence.h  persistence_manager.cpp  persistence_manager.h  radix_tree.cpp  radix_tree.h
src/l2_stubs/: chip_backend.h  chip_backend_dlopen.cpp  chip_backend_dlopen.h  chip_backend_stub.cpp  chip_backend_stub.h
tests/: test_phase0_smoke.cpp  test_phase1_e2e.py  test_phase1_testpath.cpp  test_phase2_radix_kv.cpp  test_phase3_serve.cpp  test_phase4_adapter.cpp  test_phase7_distributed.cpp  test_phase8_persistence.cpp
